make my profile prettier

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ h1{
 
 p {
   font-family: "Open Sans", sans-serif;
-  font-size: 18px;
 }
 
 a {
@@ -28,9 +27,16 @@ h3 {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(images/banner.jpg);
   background-size: cover;
   background-position: center;
-  padding: 50px;
+  padding: 40px;
   text-align: center;
   line-height: 20px;
+}
+
+#banner p {
+  width: 420px;
+  margin: 0 auto;
+  font-size: 14px;
+  padding: 10px;
 }
 
 #profile-picture {
@@ -41,6 +47,7 @@ h3 {
   width: 200px;
   border-radius: 50%;
   margin: 30px auto;
+  box-shadow: 1px 1px 10px black;
 }
 
 .btn-purple {
@@ -57,11 +64,12 @@ h3 {
   justify-content: center;
 }
 
-a:hover {
+#banner a:hover {
   text-decoration: none;
   background-color: #555bcc;
   color: white;
   font-size: 15px;
+  transition: 0.5s;
 }
 
 .content-container {
@@ -83,7 +91,7 @@ a:hover {
   margin-bottom: 60px;
   text-align: center;
   border-radius: 20px;
-  box-shadow: 2px 2px 10px grey;
+  box-shadow: 2px 2px 20px lightgrey;
 }
 
 .footer {
@@ -113,6 +121,7 @@ a:hover {
   text-decoration: none;
   border-radius: 2px;
   padding: 2px;
+  transition: 0.5s;
 }
 
 @media (max-width: 400px) {
