--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Overpass', sans-serif;
   font-weight: 400;
-  background: rgb(250, 250, 250);
+  background: #262533;
   color: rgb(250, 250, 250);
   margin: 0 auto;
 }
@@ -82,25 +82,31 @@ h3 {
 .content-container i {
   color: #6369E5;
   font-size: 50px;
+  margin-bottom: 5px;
 }
 
 .card {
-  background: white;
-  color: rgb(60, 60, 60);
+  background: rgb(245,245,245);
+  color: rgb(80,80,80);
   font-size: 18px;
   padding: 50px 60px;
   margin: 20px 80px;
   margin-bottom: 60px;
   text-align: center;
   border-radius: 20px;
-  box-shadow: 2px 2px 20px lightgrey;
+  box-shadow: 1px 1px 10px rgb(20,20,20);
+}
+
+.card h3 {
+  font-weight: bolder;
+  font-size: 25px;
 }
 
 .footer {
   text-align: center;
   margin: 0 auto;
   padding: 20px 20px;
-  background: rgb(20, 20, 20);
+  background: #262533;
   color: rgb(240, 240, 240);
 }
 
